Reetan.Nayak Dev 25/force-app/main/default/objects/Object_Landing_Page_Settings__c/Object_Landing_Page_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>stores the default landing view pages of account, opportunity and contact relationship objects</description>
    <label>Object Landing Page Settings</label>
</CustomObject>