Reetan.Nayak Dev 25/force-app/main/default/objects/Object_Landing_Page_Settings__c/fields/Account_Tab_Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>Account_Tab_Landing_Page__c</fullName>
    <description>stores the landing view URL for account object</description>
    <label>Account Tab Landing Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>