Reetan.Nayak Dev 25/force-app/main/default/objects/Object_Landing_Page_Settings__c/fields/Contact_Relationship_Tab_Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>Contact_Relationship_Tab_Landing_Page__c</fullName>
    <description>stores the landing view relative URL for contact relationship object</description>
    <label>Contact Relationship Tab Landing Page</label>
    <length>100</length>
    <type>Text</type>
</CustomField>