Reetan.Nayak Dev 25/force-app/main/default/objects/Object_Landing_Page_Settings__c/fields/Lead_Tab_Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>Lead_Tab_Landing_Page__c</fullName>
    <description>Stores the landing View URL for Lead Object</description>
    <label>Lead Tab Landing Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>